# statespace

./: .coderabbit.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN_DOC.md  HOWTOAI.md  README.md  dist-workspace.toml  flake.nix  justfile  mkdocs.yml  pyproject.toml  test.py  zensical.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: build-release-binaries.yml  deploy-docs.yml  publish-crates.yml  release.yml  test.yml
binaries/statespace-cli/: Cargo.toml
binaries/statespace-cli/src/: args.rs  config.rs  main.rs  (+3 more)
core/crates/statespace-server/: Cargo.toml
core/crates/statespace-server/src/: content.rs  error.rs  init.rs  lib.rs  main.rs  server.rs
crates/statespace-server/: Cargo.toml
crates/statespace-templates/: Cargo.toml
crates/statespace-templates/src/: index.html  lib.rs
crates/statespace-tool-runtime/: Cargo.toml
docs/: Dockerfile  deploy.sh  faq.md  index.md  install.md
docs/overrides/: main.html
docs/pages/: ai_models.md  database_cli.md  example.md  faq.md  mcp_server.md  python_sdk.md  toolfront_cloud.md  tools.md
examples/: basic.py
legacy/: pyproject.toml
scripts/: install.sh  release.sh
src/cli/: main.py
src/toolfront/: __init__.py  application.py  browser.py  cache.py  config.py  environment.py  main.py  mcp.py  storage.py  tools.py  types.py  utils.py
tests/: conftest.py
tests/integration/: test_sqlserver_features.py  test_tools_integration.py
tests/unit/: test_deploy.py  test_factory.py  test_models.py  test_sql_validation.py  test_utils.py
(+82 files in other folders)
