[package]
name = "statespace-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Open-source AI tool execution runtime"
readme = "README.md"
keywords = ["ai", "tools", "mcp", "agents"]
categories = ["web-programming::http-server"]

[lib]
name = "statespace_server"
path = "src/lib.rs"

[[bin]]
name = "statespace"
path = "src/main.rs"

[dependencies]
# Core runtime
statespace-tool-runtime = { path = "../statespace-tool-runtime" }

# Web framework
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization (for server-specific types)
serde.workspace = true
serde_json.workspace = true

# CLI
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async
async-trait.workspace = true

[dev-dependencies]
tempfile = "3"

[features]
default = []
curl = []  # Enable HTTP client tool with SSRF protections
